# PlaydateCppTemplate

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
Source/: pdxinfo
cpp/: main.cpp
cpp/include/: App.h
cpp/src/: App.cpp
